kubernetes/multipod.yml
apiVersion: v1
kind: Pod
metadata:
  name: game-server-pod 
  labels:
    app: game-server
spec:
  containers:
    - name: flask-app
      image: your-dockerhub-username/flask-app:latest # 이미지 이름 수정
      ports:
        - containerPort: 5000 # 포트 번호 수정
    - name: redis
      image: redis:latest
      ports:
        - containerPort: 6379 # 포트 번호 수정
